[package]
name = "bt_wrapper"
version = "0.1.0"
authors = ["Cappe <caspernordstrom00@gmail.com"]
edition = "2021"

[dependencies]
async-channel = "2.3.1"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
